
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://www.freezedown.org/forum
    (order is reverse-chronologic)
    ******************************************************* 
     

Darkbot 8rc4: May 07, 2009 
 	- Fixed several commands that crashed not checking for
	  a null argument array. The fix I did looks sort of 
 	  retarded, but I found if i didn't check args[0] and args
	  both, it would crash on different command types.
	  Go figure. This fix works and I'll work on bettering it.
Darkbot 8rc4: April 30, 2009
	- Fixed extensions.m4 file from discriminating against
	  me using a newer version of automake than 1.9.6, and
  	  removed a few automake warnings.
	- Fixed autotopic only using first word of input.
 	- Fixed crash on ADD command and probably others when msg
          with no arguments.
Darkbot 8rc3: Sep 17 2008
	- Fixed USERLIST and SETINFO commands crashing with no args. 
 	  There's probably more of these to come.
	- Topics can now start with these commands that check for too
          many arguments. Say you want to do:

             dbtest add info+things hey N~, I don't have info on things.

          Before this, a parsing error would invoke the "info" command. 
          This has been fixed, and the bot will now either not respond
          to these inquiries if they don't exist in it's database, or
          provide the desired reply. 
	- Added "too_many" parameter into the chanserv_command struct.
          This specifies to the command parser if a command sent to the
	  bot should be checked for having too many arguments. This 
          particular change helps fix a number of issues which would 
          cause headache, and will be fine tuned more thoroughly when
          I get the chance.
	- More parser errors fixed. Added ILN in additon to ILC.
	- add stats function now has subsequent call to free() 