@@ -7,6 +7,8 @@
      
 
 Darkbot 8rc4: May 07, 2009 
+	- Fixed permbans command not outputting help for null
+	  input. More to come.
  	- Fixed several commands that crashed not checking for
 	  a null argument array. The fix I did looks sort of 
  	  retarded, but I found if i didn't check args[0] and args
